--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.4",
     "csv-parser": "^1.12.1",
     "csvtojson": "^2.0.8",
     "express": "^4.16.3",
